Added Safe Api Call

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="facebook_app_id"></string>
     <string name="fb_login_protocol_scheme">fb1234</string>
     <string name="facebook_client_token"></string>
+    <string name="ok">OK</string>
 </resources>
